--- a/src/css/app.css
+++ b/src/css/app.css
@@ -6,3 +6,11 @@
 .notifyProgress {
   color: green;
 }
+
+.myCard {
+  height: 525px;
+  max-height: 100%;
+  /* height: 200px; */
+  /* max-width: 250px; */
+  /* max-width: 400px; */
+}
