Add some missing files

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -7,6 +7,11 @@
   color: green;
 }
 
+.subpay-form {
+  width: 100%;
+  /* max-width: 350px; */
+}
+
 .myCard {
   height: 575px;
   max-height: 100%;
